Saved Jupyter notebook 'KB Test Notebook - a220_tech_docs_content_embedded'

--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -68,7 +68,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Create the question answering chain\nchain \u003d load_qa_chain(langchain_llm, chain_type\u003d\"stuff\")\nuser_message \u003d \"\"\"\nDescription du Problème : \n\nLors du contrôle de qualité du numéro d’avion MSN 0070, une non-conformité a été identifiée concernant le perçage d\u0027une série de rivets sur le revêtement extérieur, sous la glace du pare-brise droit. Un désaffleurement a été mesuré entre -0,20 mm et -0,25 mm, dépassant les tolérances spécifiées dans les normes d\u0027assemblage. \n\nDétails Techniques : \n\nLocalisation : Zone en dessous du pare-brise droit \n\nMesure de Désaffleurement : -0,20 mm à -0,25 mm \n\nNorme Acceptable : Tolérance maximale de -0,10 mm selon la spécification interne (Réf. SP-2023-078) \n\"\"\"\n\n#user_message \u003d \"ma lamborghini est noir et devrait être rouge\"\n"
+        "# Create the question answering chain\n#chain \u003d load_qa_chain(langchain_llm, chain_type\u003d\"stuff\")\nuser_message \u003d \"\"\"\nDescription du Problème : \n\nLors du contrôle de qualité du numéro d’avion MSN 0070, une non-conformité a été identifiée concernant le perçage d\u0027une série de rivets sur le revêtement extérieur, sous la glace du pare-brise droit. Un désaffleurement a été mesuré entre -0,20 mm et -0,25 mm, dépassant les tolérances spécifiées dans les normes d\u0027assemblage. \n\nDétails Techniques : \n\nLocalisation : Zone en dessous du pare-brise droit \n\nMesure de Désaffleurement : -0,20 mm à -0,25 mm \n\nNorme Acceptable : Tolérance maximale de -0,10 mm selon la spécification interne (Réf. SP-2023-078) \n\"\"\"\n\n#user_message \u003d \"ma lamborghini est noir et devrait être rouge\"\n"
       ],
       "outputs": []
     },
