Saved Jupyter notebook 'KB Test Notebook - a220_tech_docs_content_embedded'

--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -95,7 +95,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "agents \u003d {\n    \u0027query\u0027\n}\n    \ninputs \u003d {\n    \"role\": \"000\",\n    \"description\" : user_message\n}\ncompletion \u003d completion_from_prompt_recipe(\u0027compute_nc_scenarios_query\u0027, inputs)\nresp \u003d completion.execute()\nquery \u003d resp.text\n\nprint(query)"
+        "agents \u003d {\n    \"query\": { \"prompt_recipe\": \"compute_nc_scenarios_query\", format: text}\n}\n    \ninputs \u003d {\n    \"role\": \"000\",\n    \"description\" : user_message\n}\ncompletion \u003d completion_from_prompt_recipe(\u0027compute_nc_scenarios_query\u0027, inputs)\nresp \u003d completion.execute()\nquery \u003d resp.text\n\nprint(query)"
       ],
       "outputs": []
     },
