Saved Jupyter notebook 'KB Test Notebook - a220_tech_docs_content_embedded'

--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -32,7 +32,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "import dataiku\nfrom langchain.chains.question_answering import load_qa_chain\nfrom dataiku.langchain.dku_llm import DKUChatLLM\nimport json\nKB_IDs \u003d {\n    \"tech_docs\": \"zQ92IhQ9\",\n    \"non_conformities\": \"WnKb6p17\"\n}\nk\u003d10\nclient \u003d dataiku.api_client()\nproject \u003d client.get_default_project()"
+        "import dataiku\nfrom langchain.chains.question_answering import load_qa_chain\nfrom dataiku.langchain.dku_llm import DKUChatLLM\nimport json\nKB_IDs \u003d {\n    \"tech_docs\": \"zQ92IhQ9\",\n    \"non_conformities\": \"WnKb6p17\"\n}\nk\u003d10\nclient \u003d dataiku.api_client()\nproject \u003d client.get_default_project()\nagents_prompt_recipe \u003d {\n    \"query\": \"compute_nc_scenarios_query\",\n    \"nc_search\": \"compute_nc_scenarios_search_techdocs\",\n    \"doc_search\"\n}"
       ],
       "outputs": []
     },
@@ -95,7 +95,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "agents \u003d {\n    \"query\": { \"prompt_recipe\": \"compute_nc_scenarios_query\"}\n    \"nc_search\": { \"prompt_recipe\": \"compute_nc_scenarios_query\"}\n}\n    \ninputs \u003d {\n    \"role\": \"000\",\n    \"description\" : user_message\n}\ncompletion \u003d completion_from_prompt_recipe(\u0027compute_nc_scenarios_query\u0027, inputs)\nresp \u003d completion.execute()\nquery \u003d resp.text\n\nprint(query)"
+        "\n    \ninputs \u003d {\n    \"role\": \"000\",\n    \"description\" : user_message\n}\ncompletion \u003d completion_from_prompt_recipe(\u0027compute_nc_scenarios_query\u0027, inputs)\nresp \u003d completion.execute()\nquery \u003d resp.text\n\nprint(query)"
       ],
       "outputs": []
     },
