--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -95,7 +95,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "inputs \u003d {\n    \"role\": \"000\",\n    \"description\" : user_message\n}\ncompletion \u003d completion_from_prompt_recipe(\u0027compute_nc_scenarios_query\u0027, inputs)\nresp \u003d completion.execute()\nquery \u003d agents_prompt_recipe \u003d {\n    \"query\": \"compute_nc_scenarios_query\",\n    \"nc_search\": \"compute_nc_scenarios_search_techdocs\",\n    \"doc_search\": \"compute_nc_scenarios_search_techdocs\",\n    \"propose_000\": \"compute_nc_scenarios_propose_000\",\n    \"propose_100\": \"compute_nc_scenarios_propose_100\"\n}\n\nprint(query)"
+        "query_inputs \u003d {\n    \"role\": \"000\",\n    \"description\" : user_message\n}\nquery \u003d exec_prompt_recipe(agents_prompt_recipe[\"compute_nc_scenarios_query\"], query_inputs)\n\nprint(query)"
       ],
       "outputs": []
     },
