Saved Jupyter notebook 'KB Test Notebook - a220_tech_docs_content_embedded'

--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -32,7 +32,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "import dataiku\nfrom langchain.chains.question_answering import load_qa_chain\nfrom dataiku.langchain.dku_llm import DKUChatLLM\nimport json\nKB_IDs \u003d {\n    \"tech_docs\": \"zQ92IhQ9\",\n    \"non_conformities\": \"WnKb6p17\"\n}\nk\u003d10\nclient \u003d dataiku.api_client()\nproject \u003d client.get_default_project()\nagents_prompt_recipe \u003d {\n    \"query\": \"compute_nc_scenarios_query\",\n    \"nc_search\": \"compute_nc_scenarios_search_techdocs\",\n    \"doc_search\": \"compute_nc_scenarios_search_techdocs\",\n    \"propose_000\": \"compute_nc_scenarios_propose_000\",\n    \"propose_100\": \"compute_nc_scenarios_propose_100\"\n}"
+        "import dataiku\nfrom langchain.chains.question_answering import load_qa_chain\nfrom dataiku.langchain.dku_llm import DKUChatLLM\nimport json\nKB_IDs \u003d {\n    \"tech_docs\": \"zQ92IhQ9\",\n    \"non_conformities\": \"WnKb6p17\"\n}\nk\u003d10\nclient \u003d dataiku.api_client()\nproject \u003d client.get_default_project()\nagents \u003d {\n    \"query\": \"compute_nc_scenarios_query\",\n    \"nc_search\": \"compute_nc_scenarios_search_techdocs\",\n    \"doc_search\": \"compute_nc_scenarios_search_techdocs\",\n    \"propose_000\": \"compute_nc_scenarios_propose_000\",\n    \"propose_100\": \"compute_nc_scenarios_propose_100\"\n}"
       ],
       "outputs": []
     },
@@ -95,7 +95,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "query_inputs \u003d {\n    \"role\": \"000\",\n    \"description\" : user_message\n}\nquery \u003d exec_prompt_recipe(agents_prompt_recipe[\"compute_nc_scenarios_query\"], query_inputs)\n\nprint(query)"
+        "query_inputs \u003d {\n    \"role\": \"000\",\n    \"description\" : user_message\n}\nquery \u003d exec_prompt_recipe(agents[\"query\"], query_inputs)\n\nprint(query)"
       ],
       "outputs": []
     },
@@ -104,7 +104,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "search_results \u003d []\nif (query):\n    search_results \u003d [result for key, value in vector_stores.items() for result in value.similarity_search_with_relevance_scores(query, k\u003d10)]\n    #print(search_results)\n    search_results \u003d [ {\n            \"doc\": doc.metadata[\u0027doc\u0027],\n            \"chunk_id\": doc.metadata[\u0027chunk_id\u0027],\n            \"relevance_scores\": score,\n            \"chunk\": doc.page_content\n        }\n        for doc, score in search_results\n    ]\nprint(search_results)"
+        "nc_search_inputs \u003d {\n    \"role\": \"000\",\n    \"description\" : query\n}\nnc_search \u003d exec_prompt_recipe(agents[\"query\"], query_inputs)\n\nsearch_results \u003d []\nif (query):\n    search_results \u003d [result for key, value in vector_stores.items() for result in value.similarity_search_with_relevance_scores(query, k\u003d10)]\n    #print(search_results)\n    search_results \u003d [ {\n            \"doc\": doc.metadata[\u0027doc\u0027],\n            \"chunk_id\": doc.metadata[\u0027chunk_id\u0027],\n            \"relevance_scores\": score,\n            \"chunk\": doc.page_content\n        }\n        for doc, score in search_results\n    ]\nprint(search_results)"
       ],
       "outputs": []
     },
