Saved Jupyter notebook 'KB Test Notebook - a220_tech_docs_content_embedded'

--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -104,7 +104,16 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "nc_search_inputs \u003d {\n    \"role\": \"000\",\n    \"description\" : query\n}\nnc_search \u003d exec_prompt_recipe(agents[\"query\"], query_inputs)\n\nsearch_results \u003d []\nif (query):\n    search_results \u003d [result for key, value in vector_stores.items() for result in value.similarity_search_with_relevance_scores(query, k\u003d10)]\n    #print(search_results)\n    search_results \u003d [ {\n            \"doc\": doc.metadata[\u0027doc\u0027],\n            \"chunk_id\": doc.metadata[\u0027chunk_id\u0027],\n            \"relevance_scores\": score,\n            \"chunk\": doc.page_content\n        }\n        for doc, score in search_results\n    ]\nprint(search_results)"
+        "nc_search \u003d exec_prompt_recipe(agents[\"nc_search\"], {\"input\": query})\n\nprint(nc_search)\n\n#search_results \u003d []\n#if (query):\n#    search_results \u003d [result for key, value in vector_stores.items() for result in value.similarity_search_with_relevance_scores(query, k\u003d10)]\n#    #print(search_results)\n #   search_results \u003d [ {\n            \"doc\": doc.metadata[\u0027doc\u0027],\n            \"chunk_id\": doc.metadata[\u0027chunk_id\u0027],\n            \"relevance_scores\": score,\n            \"chunk\": doc.page_content\n        }\n        for doc, score in search_results\n    ]\nprint(search_results)"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "print(nc_search[\"result\"])"
       ],
       "outputs": []
     },
