Saved Jupyter notebook 'KB Test Notebook - a220_tech_docs_content_embedded'

--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -104,16 +104,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "nc_search \u003d exec_prompt_recipe(agents[\"nc_search\"], {\"input\": query})\ndoc_search \u003d exec_prompt_recipe(agents[\"doc_search\"], {\"input\": query})\nprint(nc_search)\n\n#search_results \u003d []\n#if (query):\n#    search_results \u003d [result for key, value in vector_stores.items() for result in value.similarity_search_with_relevance_scores(query, k\u003d10)]\n#    #print(search_results)\n#   search_results \u003d [ {\n#            \"doc\": doc.metadata[\u0027doc\u0027],\n#            \"chunk_id\": doc.metadata[\u0027chunk_id\u0027],\n#            \"relevance_scores\": score,\n#            \"chunk\": doc.page_content\n#        }\n#        for doc, score in search_results\n#    ]\n"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "print(nc_search[\"result\"])"
+        "nc_search \u003d exec_prompt_recipe(agents[\"nc_search\"], {\"input\": query})\ndoc_search \u003d exec_prompt_recipe(agents[\"doc_search\"], {\"input\": query})\nprint(doc_search[\"result\"])\n\n#search_results \u003d []\n#if (query):\n#    search_results \u003d [result for key, value in vector_stores.items() for result in value.similarity_search_with_relevance_scores(query, k\u003d10)]\n#    #print(search_results)\n#   search_results \u003d [ {\n#            \"doc\": doc.metadata[\u0027doc\u0027],\n#            \"chunk_id\": doc.metadata[\u0027chunk_id\u0027],\n#            \"relevance_scores\": score,\n#            \"chunk\": doc.page_content\n#        }\n#        for doc, score in search_results\n#    ]\n"
       ],
       "outputs": []
     },
