Saved Jupyter notebook 'KB Test Notebook - a220_tech_docs_content_embedded'

--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -120,7 +120,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "doc_search \u003d exec_prompt_recipe(agents[role], {\"input\": query})\n\n\ncompletion \u003d llm.new_completion()\ncompletion.with_message(prompt)\ncompletion.settings[\"temperature\"] \u003d 0\nresp \u003d completion.execute()"
+        "reponse_content \u003d exec_prompt_recipe(agents[role], {\n    \"role\": role,\n    \"description\": user_message,\n    \"search_docs\": search\n})\n\n\ncompletion \u003d llm.new_completion()\ncompletion.with_message(prompt)\ncompletion.settings[\"temperature\"] \u003d 0\nresp \u003d completion.execute()"
       ],
       "outputs": []
     },
