--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -32,7 +32,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "import dataiku\nfrom langchain.chains.question_answering import load_qa_chain\nfrom dataiku.langchain.dku_llm import DKUChatLLM\nimport json\nKB_IDs \u003d {\n    \"tech_docs\": \"zQ92IhQ9\",\n    \"non_conformities\": \"WnKb6p17\"\n}\nk\u003d10\nclient \u003d dataiku.api_client()\nproject \u003d client.get_default_project()\nagents \u003d {\n    \"query\": \"compute_nc_scenarios_query\",\n    \"nc_search\": \"compute_nc_scenarios_search_nc\",\n    \"doc_search\": \"compute_nc_scenarios_search_techdocs\",\n    \"000\": \"compute_nc_scenarios_propose_000\",\n    \"propose_000\": \"compute_nc_scenarios_propose_000\",\n    \"propose_100\": \"compute_nc_scenarios_propose_100\"\n    \"100\": \"compute_nc_scenarios_propose_100\"\n}"
+        "import dataiku\nfrom langchain.chains.question_answering import load_qa_chain\nfrom dataiku.langchain.dku_llm import DKUChatLLM\nimport json\nKB_IDs \u003d {\n    \"tech_docs\": \"zQ92IhQ9\",\n    \"non_conformities\": \"WnKb6p17\"\n}\nk\u003d10\nclient \u003d dataiku.api_client()\nproject \u003d client.get_default_project()\nagents \u003d {\n    \"query\": \"compute_nc_scenarios_query\",\n    \"nc_search\": \"compute_nc_scenarios_search_nc\",\n    \"doc_search\": \"compute_nc_scenarios_search_techdocs\",\n    \"000\": \"compute_nc_scenarios_propose_000\",\n    \"propose_000\": \"compute_nc_scenarios_propose_000\",\n    \"propose_100\": \"compute_nc_scenarios_propose_100\",\n    \"100\": \"compute_nc_scenarios_propose_100\"\n}"
       ],
       "outputs": []
     },
@@ -120,7 +120,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "reponse_content \u003d exec_prompt_recipe(agents[role], {\n    \"role\": role,\n    \"description\": user_message,\n    \"search_docs\": doc_search,\n    \"search_nc\": search_nc,\n    \"000\": \"\"\n})\n\n\ncompletion \u003d llm.new_completion()\ncompletion.with_message(prompt)\ncompletion.settings[\"temperature\"] \u003d 0\nresp \u003d completion.execute()"
+        "{\n    \"role\": role,\n    \"description\": user_message,\n    \"search_docs\": doc_search,\n    \"search_nc\": search_nc\n}\n\nresponse_content \u003d exec_prompt_recipe(agents[role], )\n\n\n"
       ],
       "outputs": []
     },
