Saved Jupyter notebook 'KB Test Notebook - a220_tech_docs_content_embedded'

--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -120,7 +120,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "history \u003d ¨\n\n{\n    \"role\": role,\n    \"description\": user_message,\n    \"search_docs\": json.dumps(doc_search),\n    \"search_nc\": json.dumps(search_nc),\n    \"history\": json.dumps(history)\n}\n\nresponse_content \u003d exec_prompt_recipe(agents[role], )\n\n\n"
+        "history \u003d {}\n\n{\n    \"role\": role,\n    \"description\": user_message,\n    \"search_docs\": json.dumps(doc_search),\n    \"search_nc\": json.dumps(search_nc),\n    \"history\": json.dumps(history)\n}\n\nresponse_content \u003d exec_prompt_recipe(agents[role], )\n\n\n"
       ],
       "outputs": []
     },
