--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -120,7 +120,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "history \u003d {}\n\n{\n    \"role\": role,\n    \"description\": user_message,\n    \"search_docs\": json.dumps(doc_search),\n    \"search_nc\": json.dumps(search_nc),\n    \"history\": json.dumps(history)\n}\n\nresponse_content \u003d exec_prompt_recipe(agents[role], )\n\n\n"
+        "history \u003d {}\n\n\nresponse_content \u003d exec_prompt_recipe(agents[role], {\n    \"role\": role,\n    \"description\": user_message,\n    \"search_docs\": json.dumps(doc_search),\n    \"search_nc\": json.dumps(search_nc),\n    \"history\": json.dumps(history)\n})\n\n\n"
       ],
       "outputs": []
     },
@@ -129,7 +129,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "response_content \u003d json.loads(resp.text)\ndeep_chat_response \u003d {\n    \"text\": response_content[\u0027comment\u0027],\n    \"label\": response_content[\u0027label\u0027],\n    \"description\": response_content[\u0027description\u0027],\n    \"sources\": search_results,\n    \"role\": \"ai\"\n}\nprint(deep_chat_response)"
+        "deep_chat_response \u003d {\n    \"text\": response_content[\u0027comment\u0027],\n    \"label\": response_content[\u0027label\u0027],\n    \"description\": response_content[\u0027description\u0027],\n    \"sources\": search_results,\n    \"role\": \"ai\"\n}\nprint(deep_chat_response)"
       ],
       "outputs": []
     },
