Saved Jupyter notebook 'notebook editor for compute_string_statistics'

--- a/ipython_notebooks/notebook editor for compute_string_statistics.ipynb
+++ b/ipython_notebooks/notebook editor for compute_string_statistics.ipynb
@@ -62,6 +62,15 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
+        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd\nimport numpy as np\nimport re\nimport textstat\nfrom dataiku import pandasutils as pdu\n\n# Read recipe inputs\nA220_tech_docs_text \u003d dataiku.Folder(\"rhnW9xGx\")\nA220_tech_docs_text_info \u003d A220_tech_docs_text.get_info()\n\n# Function to compute text statistics\ndef compute_text_stats(text):\n    num_chars \u003d len(text)\n    num_words \u003d len(text.split())\n    num_sentences \u003d textstat.sentence_count(text)\n    avg_word_length \u003d np.mean([len(word) for word in text.split()]) if num_words \u003e 0 else 0\n    lexical_diversity \u003d len(set(text.split())) / num_words if num_words \u003e 0 else 0\n    readability \u003d textstat.flesch_kincaid_grade(text)\n\n    return pd.Series({\n        \"num_chars\": num_chars,\n        \"num_words\": num_words,\n        \"num_sentences\": num_sentences,\n        \"avg_word_length\": avg_word_length,\n        \"lexical_diversity\": lexical_diversity,\n        \"readability\": readability\n    })\n\n# Load text data from the folder\nfile_paths \u003d A220_tech_docs_text.list_paths_in_partition()\ndata \u003d []\nfor file_path in file_paths:\n    with A220_tech_docs_text.get_download_stream(file_path) as f:\n        text \u003d f.read().decode(\u0027utf-8\u0027)\n        stats \u003d compute_text_stats(text)\n        stats[\"file_path\"] \u003d file_path\n        data.append(stats)\n\n# Convert to DataFrame\ndf_stats \u003d pd.DataFrame(data)\n\n# Output DataFrame\npdu.display_dataframe(df_stats)\n"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
         "# Compute recipe outputs\n# TODO: Write here your actual code that computes the outputs\n# NB: DSS supports several kinds of APIs for reading and writing data. Please see doc.\n\nstring_statistics_df \u003d ... # Compute a Pandas dataframe to write into string_statistics\n\n\n# Write recipe outputs\nstring_statistics \u003d dataiku.Dataset(\"string_statistics\")\nstring_statistics.write_with_schema(string_statistics_df)"
       ],
       "outputs": []
