Saved Jupyter notebook 'notebook editor for compute_string_statistics'

--- a/ipython_notebooks/notebook editor for compute_string_statistics.ipynb
+++ b/ipython_notebooks/notebook editor for compute_string_statistics.ipynb
@@ -18,14 +18,14 @@
       "nbconvert_exporter": "python",
       "file_extension": ".py"
     },
+    "modifiedBy": "ludovic.bocken@cgi.com",
     "customFields": {},
     "associatedRecipe": "compute_string_statistics",
     "tags": [
       "recipe-editor"
     ],
     "createdOn": 1738257501107,
-    "creator": "ludovic.bocken@cgi.com",
-    "modifiedBy": "ludovic.bocken@cgi.com"
+    "creator": "ludovic.bocken@cgi.com"
   },
   "nbformat": 4,
   "nbformat_minor": 1,
@@ -44,7 +44,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "A220_tech_docs_text"
+        "pip install textstat"
       ],
       "outputs": []
     },
