Renamed Jupyter notebook from 'notebook editor for compute_string_statistics' to 'notebook editor for compute_document_statistics'

--- a/ipython_notebooks/notebook editor for compute_document_statistics.ipynb
+++ b/ipython_notebooks/notebook editor for compute_document_statistics.ipynb
@@ -25,7 +25,8 @@
       "recipe-editor"
     ],
     "createdOn": 1738257501107,
-    "creator": "ludovic.bocken@cgi.com"
+    "creator": "ludovic.bocken@cgi.com",
+    "versionNumber": 1
   },
   "nbformat": 4,
   "nbformat_minor": 1,
