--- a/ipython_notebooks/notebook editor for compute_documents_statistics.ipynb
+++ b/ipython_notebooks/notebook editor for compute_documents_statistics.ipynb
@@ -25,8 +25,7 @@
       "recipe-editor"
     ],
     "createdOn": 1738257501107,
-    "creator": "ludovic.bocken@cgi.com",
-    "versionNumber": 2
+    "creator": "ludovic.bocken@cgi.com"
   },
   "nbformat": 4,
   "nbformat_minor": 1,
@@ -63,7 +62,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Write recipe outputs\noutput_dataset \u003d dataiku.Dataset(\"output_dataset_name\")  # Change to your dataset name\noutput_dataset.write_with_schema(df_stats)\n"
+        "# Write recipe outputs\noutput_dataset \u003d dataiku.Dataset(\"document_statistics\")  # Change to your dataset name\noutput_dataset.write_with_schema(df_stats)"
       ],
       "outputs": []
     },
@@ -72,7 +71,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Compute recipe outputs\n# TODO: Write here your actual code that computes the outputs\n# NB: DSS supports several kinds of APIs for reading and writing data. Please see doc.\n\nstring_statistics_df \u003d ... # Compute a Pandas dataframe to write into string_statistics\n\n\n# Write recipe outputs\nstring_statistics \u003d dataiku.Dataset(\"string_statistics\")\nstring_statistics.write_with_schema(string_statistics_df)"
+        ""
       ],
       "outputs": []
     }
