Saved Jupyter notebook 'notebook editor for compute_documents_statistics'

--- a/ipython_notebooks/notebook editor for compute_documents_statistics.ipynb
+++ b/ipython_notebooks/notebook editor for compute_documents_statistics.ipynb
@@ -62,7 +62,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Write recipe outputs\noutput_dataset \u003d dataiku.Dataset(\"document_statistics\")  # Change to your dataset name\noutput_dataset.write_with_schema(df_stats)"
+        "# Write recipe outputs\noutput_dataset \u003d dataiku.Dataset(\"documents_statistics\")  # Change to your dataset name\noutput_dataset.write_with_schema(df_stats)"
       ],
       "outputs": []
     },
