Deleted dataset NONCONFORMITIES.string_statistics

--- a/ipython_notebooks/notebook editor for compute_documents_statistics.ipynb
+++ b/ipython_notebooks/notebook editor for compute_documents_statistics.ipynb
@@ -20,9 +20,8 @@
     },
     "modifiedBy": "ludovic.bocken@cgi.com",
     "customFields": {},
-    "associatedRecipe": "compute_string_statistics",
     "tags": [
-      "recipe-editor"
+      "deleted-recipe-editor"
     ],
     "createdOn": 1738257501107,
     "creator": "ludovic.bocken@cgi.com"
