Deleted recipe NONCONFORMITIES.compute_english_wiktionary_titles

--- a/ipython_notebooks/notebook editor for compute_english_wiktionary_titles.ipynb
+++ b/ipython_notebooks/notebook editor for compute_english_wiktionary_titles.ipynb
@@ -19,9 +19,8 @@
       "file_extension": ".py"
     },
     "customFields": {},
-    "associatedRecipe": "compute_english_wiktionary_titles",
     "tags": [
-      "recipe-editor"
+      "deleted-recipe-editor"
     ],
     "createdOn": 1738262802642,
     "creator": "ludovic.bocken@cgi.com",
