Saved Jupyter notebook 'notebook editor for compute_all_wikidata_properties'

--- a/ipython_notebooks/notebook editor for compute_all_wikidata_properties.ipynb
+++ b/ipython_notebooks/notebook editor for compute_all_wikidata_properties.ipynb
@@ -1,68 +1,70 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
+      "name": "python3",
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python"
     },
-    "associatedRecipe": "compute_all_wikidata_properties",
+    "hide_input": false,
+    "language_info": {
+      "name": "python",
+      "version": "3.9.21",
+      "mimetype": "text/x-python",
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "pygments_lexer": "ipython3",
+      "nbconvert_exporter": "python",
+      "file_extension": ".py"
+    },
     "creator": "ludovic.bocken@cgi.com",
-    "createdOn": 1738268118606,
     "tags": [
       "recipe-editor"
     ],
-    "customFields": {}
+    "createdOn": 1738268118606,
+    "associatedRecipe": "compute_all_wikidata_properties",
+    "customFields": {},
+    "modifiedBy": "ludovic.bocken@cgi.com"
   },
+  "nbformat": 4,
+  "nbformat_minor": 1,
   "cells": [
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
-        "from SPARQLWrapper import SPARQLWrapper, JSON\n",
-        "import pandas as pd\n",
-        "import dataiku\n",
-        "\n",
-        "# Define SPARQL endpoint\n",
-        "sparql \u003d SPARQLWrapper(\"https://query.wikidata.org/sparql\")\n",
-        "\n",
-        "# Define the SPARQL query\n",
-        "query \u003d \"\"\"\n",
-        "SELECT ?property ?propertyType ?propertyLabel ?propertyDescription ?propertyAltLabel WHERE {\n",
-        "  ?property wikibase:propertyType ?propertyType .\n",
-        "  SERVICE wikibase:label { bd:serviceParam wikibase:language \"[AUTO_LANGUAGE],mul,en\". }\n",
-        "}\n",
-        "ORDER BY ASC(xsd:integer(STRAFTER(STR(?property), \u0027P\u0027)))\n",
-        "\"\"\"\n",
-        "\n",
-        "# Set up the query\n",
-        "sparql.setQuery(query)\n",
-        "sparql.setReturnFormat(JSON)\n",
-        "\n",
-        "# Execute the query\n",
-        "results \u003d sparql.query().convert()\n",
-        "\n",
-        "# Extract results into a list of dictionaries\n",
-        "data \u003d []\n",
-        "for result in results[\"results\"][\"bindings\"]:\n",
-        "    data.append({\n",
-        "        \"property\": result[\"property\"][\"value\"],\n",
-        "        \"propertyType\": result[\"propertyType\"][\"value\"],\n",
-        "        \"propertyLabel\": result.get(\"propertyLabel\", {}).get(\"value\", \"\"),\n",
-        "        \"propertyDescription\": result.get(\"propertyDescription\", {}).get(\"value\", \"\"),\n",
-        "        \"propertyAltLabel\": result.get(\"propertyAltLabel\", {}).get(\"value\", \"\"),\n",
-        "    })\n",
-        "\n",
-        "# Convert to DataFrame\n",
-        "df \u003d pd.DataFrame(data)\n",
-        "\n",
-        "# Save DataFrame to Dataiku dataset\n",
-        "dataset_name \u003d \"all_wikidata_properties\"\n",
-        "dataiku.Dataset(dataset_name).write_with_schema(df)"
-      ]
+        "from SPARQLWrapper import SPARQLWrapper, JSON\nimport pandas as pd\nimport dataiku\n\n# Define SPARQL endpoint\nsparql \u003d SPARQLWrapper(\"https://query.wikidata.org/sparql\")\n\n# Define the SPARQL query\nquery \u003d \"\"\"\nSELECT ?property ?propertyType ?propertyLabel ?propertyDescription ?propertyAltLabel WHERE {\n  ?property wikibase:propertyType ?propertyType .\n  SERVICE wikibase:label { bd:serviceParam wikibase:language \"[AUTO_LANGUAGE],mul,en\". }\n}\nORDER BY ASC(xsd:integer(STRAFTER(STR(?property), \u0027P\u0027)))\n\"\"\"\n\n# Set up the query\nsparql.setQuery(query)\nsparql.setReturnFormat(JSON)\n\n# Execute the query\nresults \u003d sparql.query().convert()\n\n# Extract results into a list of dictionaries\ndata \u003d []\nfor result in results[\"results\"][\"bindings\"]:\n    data.append({\n        \"property\": result[\"property\"][\"value\"],\n        \"propertyType\": result[\"propertyType\"][\"value\"],\n        \"propertyLabel\": result.get(\"propertyLabel\", {}).get(\"value\", \"\"),\n        \"propertyDescription\": result.get(\"propertyDescription\", {}).get(\"value\", \"\"),\n        \"propertyAltLabel\": result.get(\"propertyAltLabel\", {}).get(\"value\", \"\"),\n    })\n\n# Convert to DataFrame\ndf \u003d pd.DataFrame(data)\n\n# Save DataFrame to Dataiku dataset\ndataset_name \u003d \"all_wikidata_properties\"\nDataset(dataset_name).write_with_schema(df)"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "pip install SPARQLWrapper pandas dataiku\n"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "import dataiku\nprint(\"Dataiku module is available\")"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        ""
+      ],
+      "outputs": []
     }
   ]
 }
