Saved Jupyter notebook 'KB Test Notebook - a220_tech_docs_content_embedded'

--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -41,7 +41,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "agents\nrecipe \u003d project.get_recipe(\u0027compute_nc_scenarios_query\u0027)\n\n# Récupérer la configuration actuelle de la recette\nsettings \u003d recipe.get_settings()  # Correctement utilisé pour récupérer la configuration\nprint(\"Configuration actuelle :\", settings.get_json_payload()"
+        "agents_dic \u003d {name : {\"recipe\": agents.name, \"config\": project.get_recipe(\u0027compute_nc_scenarios_query\u0027)}}\nrecipe \u003d project.get_recipe(\u0027compute_nc_scenarios_query\u0027)\n\n# Récupérer la configuration actuelle de la recette\nsettings \u003d recipe.get_settings()  # Correctement utilisé pour récupérer la configuration\nprint(\"Configuration actuelle :\", settings.get_json_payload()"
       ],
       "outputs": []
     },
