Saved Jupyter notebook 'KB Test Notebook - a220_tech_docs_content_embedded'

--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -41,7 +41,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "agents_dic \u003d {name: {\"recipe\": agents[name], \"config\": project.get_recipe(agents[name])} for name in agents.keys()}\nrecipe \u003d project.get_recipe(\u0027compute_nc_scenarios_query\u0027)\nprint(agents_dic)"
+        "agents_dic \u003d {name: {\"recipe\": agents[name], \"config\": project.get_recipe(agents[name]).get_settings().get_json_payload()} for name in agents.keys()}\nrecipe \u003d project.get_recipe(\u0027compute_nc_scenarios_query\u0027)\nprint(agents_dic)"
       ],
       "outputs": []
     },
