Deleted dataset NONCONFORMITIES.all_wikidata_properties

--- a/ipython_notebooks/notebook editor for compute_all_wikidata_properties.ipynb
+++ b/ipython_notebooks/notebook editor for compute_all_wikidata_properties.ipynb
@@ -23,7 +23,7 @@
     },
     "creator": "ludovic.bocken@cgi.com",
     "tags": [
-      "recipe-editor"
+      "deleted-recipe-editor"
     ],
     "createdOn": 1738268118606,
     "creationTag": {
@@ -33,7 +33,6 @@
       },
       "lastModifiedOn": 1738268118606
     },
-    "associatedRecipe": "compute_all_wikidata_properties",
     "customFields": {},
     "modifiedBy": "ludovic.bocken@cgi.com"
   },
