Saved Jupyter notebook 'notebook editor for compute_document_statistics'

--- a/ipython_notebooks/notebook editor for compute_document_statistics.ipynb
+++ b/ipython_notebooks/notebook editor for compute_document_statistics.ipynb
@@ -18,14 +18,14 @@
       "nbconvert_exporter": "python",
       "file_extension": ".py"
     },
-    "customFields": {},
+    "modifiedBy": "ludovic.bocken@cgi.com",
     "associatedRecipe": "compute_document_statistics",
+    "creator": "ludovic.bocken@cgi.com",
+    "createdOn": 1738262123813,
+    "customFields": {},
     "tags": [
       "recipe-editor"
-    ],
-    "createdOn": 1738262123813,
-    "creator": "ludovic.bocken@cgi.com",
-    "modifiedBy": "ludovic.bocken@cgi.com"
+    ]
   },
   "nbformat": 4,
   "nbformat_minor": 1,
